the ,jar file now works