@@ -5,49 +5,59 @@ plugins {
     id 'org.openjfx.javafxplugin' version '0.0.8'
 }
 
-javafx{
-    version = '11.0.2'
-    modules = ['javafx.controls']
-    mainClassName = 'startScreen.StartScreen'
-}
+
+sourceCompatibility = 1.11
 
 repositories {
-    mavenLocal()
     mavenCentral()
 }
 
-
+def currentOS = org.gradle.internal.os.OperatingSystem.current()
+def platform
+if (currentOS.isWindows()) {
+    platform = 'win'
+} else if (currentOS.isLinux()) {
+    platform = 'linux'
+} else if (currentOS.isMacOsX()) {
+    platform = 'mac'
+}
 dependencies {
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.11.0.rc1'
-    compile 'org.apache.commons:commons-io:1.3.2'
-    compile 'org.openjfx:javafx-base:11'
-    compile 'org.openjfx:javafx-graphics:11'
-    compile 'org.openjfx:javafx-controls:11'
-    compile 'org.openjfx:javafx-fxml:11'
-
+    compile "org.openjfx:javafx-base:11:${platform}"
+    compile "org.openjfx:javafx-graphics:11:${platform}"
+    compile "org.openjfx:javafx-controls:11:${platform}"
+    compile "org.openjfx:javafx-fxml:11:${platform}"
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
-sourceCompatibility = '11'
+mainClassName = 'Main'
 
-/*{
-    doFirst{
-        options.compilerArgs =[
+jar {
+    manifest {
+        attributes 'Main-Class': 'Main'
+    }
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
+compileJava {
+    doFirst {
+        options.compilerArgs = [
                 '--module-path', classpath.asPath,
                 '--add-modules', 'javafx.controls,javafx.fxml'
         ]
     }
-}*/
+}
 
-
-jar {
-    manifest {
-        attributes 'Main-Class': 'startScreen.StartScreen.'
+run {
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls,javafx.fxml'
+        ]
     }
-    from{
-        configurations.compile.collect{it.isDirectory() ? it : zipTree(it)}
-    }
+}
 
-
+wrapper {
+    gradleVersion = '5.2.1'
+    distributionUrl = distributionUrl.replace("bin", "all")
 }
